added file logo to resume button on nav bar

--- a/resume.html
+++ b/resume.html
@@ -259,7 +259,11 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="resume.html">Resume</a>
+  <a href="resume.html">
+    <span class="fa fa-file"></span>
+     
+    Resume
+  </a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
