--- a/index.html
+++ b/index.html
@@ -259,7 +259,11 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="resume.html">Resume</a>
+  <a href="resume.html">
+    <span class="fa fa-file"></span>
+     
+    Resume
+  </a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -297,8 +301,8 @@ $(document).ready(function () {
 
 <div id="welcome" class="section level2">
 <h2>Welcome!</h2>
-<p><img src="images/headshot.jpg" style="width:75%"> Hello! I am Amy
-Yeung, a second-year MPH candidate at Columbia University.</p>
+<p>Hello! I am Amy Yeung, a second-year MPH candidate at Columbia
+University.</p>
 </div>
 
 
