aligned headshot to center

--- a/index.html
+++ b/index.html
@@ -301,7 +301,9 @@ $(document).ready(function () {
 
 <div id="welcome" class="section level2">
 <h2>Welcome!</h2>
-<p><img src="images/headshot.jpg" style="width:30%"></p>
+<p style="text-align:center;">
+<img src="images/headshot.jpg" style="width:30%">
+</p>
 <p>Hello! I am Amy Yeung, a second-year MPH candidate at Columbia
 University.</p>
 </div>
