changed title, removed level 1 header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Home</title>
+<title>Amy Yeung’s Website | Home</title>
 
 <script src="site_libs/header-attrs-2.16/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -294,19 +294,16 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Home</h1>
+<h1 class="title toc-ignore">Amy Yeung’s Website | Home</h1>
 
 </div>
 
 
-<div id="welcome" class="section level2">
-<h2>Welcome!</h2>
 <p style="text-align:center;">
 <img src="images/headshot.jpg" style="width:30%">
 </p>
 <p>Hello! I am Amy Yeung, a second-year MPH candidate at Columbia
 University.</p>
-</div>
 
 
 
