--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Amy Yeung’s Website | Home</title>
+<title>Amy Yeung’s Website</title>
 
 <script src="site_libs/header-attrs-2.16/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -294,7 +294,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Amy Yeung’s Website | Home</h1>
+<h1 class="title toc-ignore">Amy Yeung’s Website</h1>
 
 </div>
 
@@ -304,6 +304,7 @@ $(document).ready(function () {
 </p>
 <p>Hello! I am Amy Yeung, a second-year MPH candidate at Columbia
 University.</p>
+<p>Click <a href="resume.html">here</a> to view my resume</p>
 
 
 
