embedded resume pdf to resume page

--- a/resume.html
+++ b/resume.html
@@ -301,6 +301,8 @@ $(document).ready(function () {
 
 <div id="this-is-my-resume-page" class="section level2">
 <h2>This is my resume page</h2>
+<p>Click <a href="Amy%20Yeung%20Resume.pdf">here</a> for my full
+resume.</p>
 </div>
 
 
