added education section

--- a/resume.html
+++ b/resume.html
@@ -299,10 +299,46 @@ $(document).ready(function () {
 </div>
 
 
-<div id="this-is-my-resume-page" class="section level2">
-<h2>This is my resume page</h2>
+<div id="education" class="section level1">
+<h1>Education</h1>
+<div id="columbia-university-mailman-school-of-public-health-may-2023"
+class="section level3">
+<h3>Columbia University Mailman School of Public Health (May 2023)</h3>
+<p><em>New York, NY</em></p>
+<ul>
+<li>Master of Public Health in Epidemiology (MPH)</li>
+<li>GPA: 4.1</li>
+<li>Certificate in Applied Biostatistics &amp; Public Health Data
+Science</li>
+<li>Leadership: Bloom Mentoring (2022), Healthcare Data Analytics
+(2022), Mailman Consulting Club (2022)</li>
+<li>Relevant Coursework: Machine Learning, Data Science, Applied
+Regression, Health Accounting &amp; Budgeting</li>
+</ul>
+</div>
+<div id="the-university-of-hong-kong-may-2021" class="section level3">
+<h3>The University of Hong Kong (May 2021)</h3>
+<p><em>Hong Kong</em></p>
+<ul>
+<li>Bachelor of Biomedical Sciences (BBiomedSc)</li>
+<li>GPA: 3.7 (First Class Honours)</li>
+<li>Awards: Dean’s Honours List (2020-2021), APRU Global Health Virtual
+Case Competition (2019, 2021)</li>
+<li>Leadership: AIESEC in HKU (2017-2019), Biomedical Sciences Society
+(2017-2018)</li>
+</ul>
+</div>
+<div id="university-of-california-at-berkeley-may-2020"
+class="section level3">
+<h3>University of California at Berkeley (May 2020)</h3>
+<p><em>Berkeley, CA</em></p>
+<ul>
+<li>GPA: 3.9</li>
+<li>Exchange year, took graduate-level public health classes</li>
+</ul>
 <p>Click <a href="Amy%20Yeung%20Resume.pdf">here</a> for my full
 resume.</p>
+</div>
 </div>
 
 
