--- a/resume.html
+++ b/resume.html
@@ -336,6 +336,61 @@ class="section level3">
 <li>GPA: 3.9</li>
 <li>Exchange year, took graduate-level public health classes</li>
 </ul>
+</div>
+</div>
+<div id="experience" class="section level1">
+<h1>Experience</h1>
+<div
+id="columbia-university-mailman-school-of-public-health-summer-2022"
+class="section level3">
+<h3>Columbia University Mailman School of Public Health (Summer
+2022)</h3>
+<p><em>New York, NY</em></p>
+<p><strong>Research Assistant</strong></p>
+<ul>
+<li>Conducted literature research using Pubmed and Law Atlas and
+co-wrote the significance section of 3 grant proposals on substance use
+and health policies to obtain funding for separate research
+projects</li>
+<li>Spearheaded a self-conceived independent research topic
+investigating complex survey data from the National Survey of Drug Use
+and Health with R and SAS</li>
+</ul>
+</div>
+<div id="the-university-of-hong-kong-school-of-public-health"
+class="section level3">
+<h3>The University of Hong Kong School of Public Health</h3>
+<p><em>Hong Kong</em></p>
+<p><strong>Student Research Assistant (Summer 2021)</strong></p>
+<ul>
+<li>Wrangled Hong Kong COVID-19 case data from the Centre for Health
+Protection with Excel to infer 1,800 transmission pairs from over 5,000
+cases which were used as a preface for 3 in-depth research projects</li>
+<li>Accurately communicated findings by co-authoring 3 manuscripts for
+publication in epidemiological journals and creating figures for
+visualization after analysis with R. Received 37 citations and ≥ 5,000
+views</li>
+</ul>
+<p><strong>Student Research Assistant (Summer 2020)</strong></p>
+<ul>
+<li>Generated search algorithm on Pubmed, collected and analyzed data
+from over 400 articles with Excel and R, created visuals figures and
+reported findings by writing a published journal article. Received 12
+citations and 1,600 views</li>
+</ul>
+</div>
+<div id="being-patient" class="section level3">
+<h3>Being Patient</h3>
+<p><em>Virtual</em></p>
+<p><strong>Summer Intern</strong></p>
+<ul>
+<li>Designed a curriculum for a proposed online course on dementia for
+the 40,000 members and created modules with content and visuals from
+research articles using precise and concise language with Keynote</li>
+<li>Authored an article on the platform by reporting findings from a
+scientific journal in a simplified manner, receiving the most engagement
+on the platform since 2020</li>
+</ul>
 <p>Click <a href="Amy%20Yeung%20Resume.pdf">here</a> for my full
 resume.</p>
 </div>
