added leadership section

--- a/resume.html
+++ b/resume.html
@@ -391,6 +391,40 @@ research articles using precise and concise language with Keynote</li>
 scientific journal in a simplified manner, receiving the most engagement
 on the platform since 2020</li>
 </ul>
+</div>
+</div>
+<div id="leadership" class="section level1">
+<h1>Leadership</h1>
+<div id="bloom-mentoring-jan-2022---present" class="section level3">
+<h3>Bloom Mentoring (Jan 2022 - Present)</h3>
+<p><em>New York, NY</em></p>
+<p><strong>Vice President, Columbia University Mailman School of Public
+Health Chapter</strong></p>
+<ul>
+<li>Successfully implemented 3 campus events in compliance with
+university rules by organizing meetings and unifying ideas from board
+members. Increased membership by 83%, increased social media engagement
+by 300%</li>
+<li>Partnered with other school organizations and external stakeholders
+to organize a collaborative event series focused on promoting menstrual
+equity to students</li>
+</ul>
+</div>
+<div id="aiesec-in-hku-june-2018---may-2019" class="section level3">
+<h3>AIESEC in HKU (June 2018 - May 2019)</h3>
+<p><em>Hong Kong</em></p>
+<p><strong>Manager of Talent Management, The University of Hong Kong
+Chapter</strong></p>
+<ul>
+<li>Organized 4 recruitment talks, led the interview and selection
+process from over 200 candidates to over 30 members, and facilitated an
+induction camp to introduce members to organizational and chapter
+goals</li>
+<li>Supervised my team of 6 members to facilitate monthly events and
+coaching sessions to boost organizational knowledge, raise social
+awareness and empower members in alignment with the targets set by the
+Vice President</li>
+</ul>
 <p>Click <a href="Amy%20Yeung%20Resume.pdf">here</a> for my full
 resume.</p>
 </div>
