added skills and languages

--- a/resume.html
+++ b/resume.html
@@ -425,9 +425,16 @@ coaching sessions to boost organizational knowledge, raise social
 awareness and empower members in alignment with the targets set by the
 Vice President</li>
 </ul>
+</div>
+</div>
+<div id="skills-and-languages" class="section level1">
+<h1>Skills and Languages</h1>
+<p><strong>Skills:</strong> R, Python, SAS, SQL, STATA, Microsoft Office
+(Excel, PowerPoint, Word), Git, Final Cut Pro</p>
+<p><strong>Languages:</strong> English (Native), Cantonese (Fluent)
+Mandarin (Fluent), Spanish (Intermediate)</p>
 <p>Click <a href="Amy%20Yeung%20Resume.pdf">here</a> for my full
 resume.</p>
-</div>
 </div>
 
 
