moved resume pdf link to the top

--- a/resume.html
+++ b/resume.html
@@ -299,6 +299,8 @@ $(document).ready(function () {
 </div>
 
 
+<p><em>Click <a href="Amy%20Yeung%20Resume.pdf">here</a> for my full
+resume as a PDF.</em></p>
 <div id="education" class="section level1">
 <h1>Education</h1>
 <div id="columbia-university-mailman-school-of-public-health-may-2023"
@@ -433,8 +435,6 @@ Vice President</li>
 (Excel, PowerPoint, Word), Git, Final Cut Pro</p>
 <p><strong>Languages:</strong> English (Native), Cantonese (Fluent)
 Mandarin (Fluent), Spanish (Intermediate)</p>
-<p>Click <a href="Amy%20Yeung%20Resume.pdf">here</a> for my full
-resume.</p>
 </div>
 
 
