--- a/resume.html
+++ b/resume.html
@@ -265,6 +265,13 @@ $(document).ready(function () {
     Resume
   </a>
 </li>
+<li>
+  <a href="publication.html">
+    <span class="fa fa-light fa-pen"></span>
+     
+    Publications
+  </a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
