added journal articles

--- a/publication.html
+++ b/publication.html
@@ -308,6 +308,19 @@ $(document).ready(function () {
 
 <p>Here is a compilation of publications that I have been involved
 in:</p>
+<p><strong>Research articles:</strong></p>
+<ul>
+<li><a
+href="https://academic.oup.com/cid/article/73/12/2344/6297425?login=true">The
+incubation period distribution of coronavirus disease 2019 (COVID-19): a
+systematic review and meta-analysis</a></li>
+<li><a
+href="https://academic.oup.com/cid/article/74/4/685/6284329?login=true">Serial
+intervals and case isolation delays for COVID-19: a systematic review
+and meta-analysis</a></li>
+<li><a href="https://pubmed.ncbi.nlm.nih.gov/33895227/">COVID-19
+transmission in Hong Kong despite universal masking</a></li>
+</ul>
 
 
 
