added other articles

--- a/publication.html
+++ b/publication.html
@@ -321,6 +321,13 @@ and meta-analysis</a></li>
 <li><a href="https://pubmed.ncbi.nlm.nih.gov/33895227/">COVID-19
 transmission in Hong Kong despite universal masking</a></li>
 </ul>
+<p><strong>Other articles:</strong></p>
+<ul>
+<li><a
+href="https://www.beingpatient.com/first-fda-approved-diagnostic-agent-to-detect-tau-tangles-in-alzheimers-patients/?fbclid=IwAR2_hl1YvQu6tnSGVoEy8Elr3oRKoXGQcKT0piYdZvONlEWGvMqQk_72hfU">First
+FDA-Approved Diagnostic Agent to Detect Tau Tangles in Alzheimer’s
+Patients</a></li>
+</ul>
 
 
 
