changed education formatting

--- a/resume.html
+++ b/resume.html
@@ -314,8 +314,8 @@ resume as a PDF.</em></p>
 class="section level3">
 <h3>Columbia University Mailman School of Public Health (May 2023)</h3>
 <p><em>New York, NY</em></p>
+<p><strong>Master of Public Health in Epidemiology (MPH)</strong></p>
 <ul>
-<li>Master of Public Health in Epidemiology (MPH)</li>
 <li>GPA: 4.1</li>
 <li>Certificate in Applied Biostatistics &amp; Public Health Data
 Science</li>
@@ -328,8 +328,8 @@ Regression, Health Accounting &amp; Budgeting</li>
 <div id="the-university-of-hong-kong-may-2021" class="section level3">
 <h3>The University of Hong Kong (May 2021)</h3>
 <p><em>Hong Kong</em></p>
+<p><strong>Bachelor of Biomedical Sciences (BBiomedSc)</strong></p>
 <ul>
-<li>Bachelor of Biomedical Sciences (BBiomedSc)</li>
 <li>GPA: 3.7 (First Class Honours)</li>
 <li>Awards: Dean’s Honours List (2020-2021), APRU Global Health Virtual
 Case Competition (2019, 2021)</li>
@@ -341,6 +341,7 @@ Case Competition (2019, 2021)</li>
 class="section level3">
 <h3>University of California at Berkeley (May 2020)</h3>
 <p><em>Berkeley, CA</em></p>
+<p><strong>Study Abroad</strong></p>
 <ul>
 <li>GPA: 3.9</li>
 <li>Exchange year, took graduate-level public health classes</li>
