changed text for index

--- a/index.html
+++ b/index.html
@@ -306,12 +306,22 @@ $(document).ready(function () {
 </div>
 
 
+<p><em>Welcome to my website! I’m Amy Yeung.</em></p>
 <p style="text-align:center;">
 <img src="images/headshot.jpg" style="width:30%">
 </p>
-<p>Hello! I am Amy Yeung, a second-year MPH candidate at Columbia
-University.</p>
-<p>Click <a href="resume.html">here</a> to view my resume</p>
+<p><strong>Who I am:</strong> A second-year Master of Public Health
+student at Columbia, passionate about using data to understand patterns
+and make decisions in the health industry. Originally from Hong
+Kong.</p>
+<p><strong>Things I care about:</strong> Data-driven solutions, health
+equity, transparent communication, constructive feedback,
+interdisciplinary collaboration</p>
+<p><strong>How I do things:</strong> I start with the fundamentals
+(making sure I understand everything), then branch outwards. Once I
+start, I won’t stop until I’m satisfied.</p>
+<p><strong>Other things I enjoy:</strong> Yoga, meditation, learning
+about the life stories of strangers</p>
 
 
 
