added TA position in leadership section

--- a/resume.html
+++ b/resume.html
@@ -405,6 +405,19 @@ on the platform since 2020</li>
 </div>
 <div id="leadership" class="section level1">
 <h1>Leadership</h1>
+<div id="columbia-university-mailman-school-of-public-health-fall-2022"
+class="section level3">
+<h3>Columbia University Mailman School of Public Health (Fall 2022)</h3>
+<p><em>New York, NY</em></p>
+<p><strong>Teaching Assistant - Research Methods &amp; Application
+(Quantitative section)</strong></p>
+<ul>
+<li>Facilitated the learning of over 19 students by hosting weekly lab
+sessions, grading homework and hosting office hours</li>
+<li>Collected feedback from students and effectively relayed comments to
+the instructor team</li>
+</ul>
+</div>
 <div id="bloom-mentoring-jan-2022---present" class="section level3">
 <h3>Bloom Mentoring (Jan 2022 - Present)</h3>
 <p><em>New York, NY</em></p>
