--- a/resume.html
+++ b/resume.html
@@ -272,6 +272,13 @@ $(document).ready(function () {
     Publications
   </a>
 </li>
+<li>
+  <a href="dashboard.html">
+    <span class="fa fa-solid fa-chart-line"></span>
+     
+    NOAA Dashboard
+  </a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
