added content to index

--- a/index.html
+++ b/index.html
@@ -314,6 +314,23 @@ $(document).ready(function () {
 
 
 <p><em>Welcome to my website! I’m Amy Yeung.</em></p>
+<div id="whats-on-this-website" class="section level4">
+<h4>What’s on this website:</h4>
+<ul>
+<li>A quick <a href="index.html">summary</a> about me (below)</li>
+<li>My <a href="resume.html">resume</a></li>
+<li>My <a href="publication.html">publications</a></li>
+<li>A <a href="dashboard.html">dashboard</a> using 2007 NOAA National
+Climatic Data Center Data</li>
+<li>Ways to connect with me via <a
+href="http://github.com/ay2543/">GitHub</a>, <a
+href="mailto:amy715@gmail.com">email</a>, <a
+href="http://linkedin.com/in/amy715">LinkedIn</a></li>
+</ul>
+<p><em>Everything mentioned above is also available on the navigation
+bar at the top of the page.</em> <em>The link to the GitHub repository
+for this website is <a
+href="https://github.com/ay2543/amyyeung.github.io">here</a></em></p>
 <p style="text-align:center;">
 <img src="images/headshot.jpg" style="width:30%">
 </p>
@@ -329,6 +346,7 @@ interdisciplinary collaboration</p>
 start, I won’t stop until I’m satisfied.</p>
 <p><strong>Other things I enjoy:</strong> Yoga, meditation, learning
 about the life stories of strangers</p>
+</div>
 
 
 
