fixed formatting, changed some descriptions

--- a/index.html
+++ b/index.html
@@ -328,9 +328,9 @@ href="mailto:amy715@gmail.com">email</a>, <a
 href="http://linkedin.com/in/amy715">LinkedIn</a></li>
 </ul>
 <p><em>Everything mentioned above is also available on the navigation
-bar at the top of the page.</em> <em>The link to the GitHub repository
-for this website is <a
-href="https://github.com/ay2543/amyyeung.github.io">here</a></em></p>
+bar at the top of the page.</em></p>
+<p><em>The link to the GitHub repository for this website is <a
+href="https://github.com/ay2543/amyyeung.github.io">here</a></em>.</p>
 <p style="text-align:center;">
 <img src="images/headshot.jpg" style="width:30%">
 </p>
@@ -341,9 +341,10 @@ Kong.</p>
 <p><strong>Things I care about:</strong> Data-driven solutions, health
 equity, transparent communication, constructive feedback,
 interdisciplinary collaboration</p>
-<p><strong>How I do things:</strong> I start with the fundamentals
-(making sure I understand everything), then branch outwards. Once I
-start, I won’t stop until I’m satisfied.</p>
+<p><strong>How I do things:</strong> I start at the core (making sure I
+understand the fundamentals), then branch outwards, while consistently
+communicating my progress and exchanging feedback. Usually on the hunt
+for more efficient/innovative approaches.</p>
 <p><strong>Other things I enjoy:</strong> Yoga, meditation, learning
 about the life stories of strangers</p>
 </div>
