changed formatting of about me

--- a/index.html
+++ b/index.html
@@ -331,6 +331,9 @@ href="http://linkedin.com/in/amy715">LinkedIn</a></li>
 bar at the top of the page.</em></p>
 <p><em>The link to the GitHub repository for this website is <a
 href="https://github.com/ay2543/amyyeung.github.io">here</a></em>.</p>
+</div>
+<div id="about-me" class="section level2">
+<h2>About me</h2>
 <p style="text-align:center;">
 <img src="images/headshot.jpg" style="width:30%">
 </p>
