changed publications to projects; added recent projects

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ $(document).ready(function () {
   <a href="publication.html">
     <span class="fa fa-light fa-pen"></span>
      
-    Publications
+    Projects
   </a>
 </li>
 <li>
