--- a/publication.html
+++ b/publication.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Publications</title>
+<title>Projects</title>
 
 <script src="site_libs/header-attrs-2.16/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -269,7 +269,7 @@ $(document).ready(function () {
   <a href="publication.html">
     <span class="fa fa-light fa-pen"></span>
      
-    Publications
+    Projects
   </a>
 </li>
 <li>
@@ -308,13 +308,12 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Publications</h1>
+<h1 class="title toc-ignore">Projects</h1>
 
 </div>
 
 
-<p>Here is a compilation of publications that I have been involved
-in:</p>
+<p>Here is a compilation of projects that I have been involved in:</p>
 <p><strong>Research articles:</strong></p>
 <ul>
 <li><a
@@ -327,6 +326,14 @@ intervals and case isolation delays for COVID-19: a systematic review
 and meta-analysis</a></li>
 <li><a href="https://pubmed.ncbi.nlm.nih.gov/33895227/">COVID-19
 transmission in Hong Kong despite universal masking</a></li>
+<li><a
+href="https://www.medrxiv.org/content/10.1101/2022.08.29.22279351v1">Insights
+into COVID-19 epidemiology and control from temporal changes in serial
+interval distributions in Hong Kong (preprint)</a></li>
+<li><a
+href="https://www.researchsquare.com/article/rs-1407962/v1">Time-varying
+transmission heterogeneity of SARS and COVID-19 in Hong Kong
+(pre-print)</a></li>
 </ul>
 <p><strong>Other articles:</strong></p>
 <ul>
@@ -334,6 +341,11 @@ transmission in Hong Kong despite universal masking</a></li>
 href="https://www.beingpatient.com/first-fda-approved-diagnostic-agent-to-detect-tau-tangles-in-alzheimers-patients/?fbclid=IwAR2_hl1YvQu6tnSGVoEy8Elr3oRKoXGQcKT0piYdZvONlEWGvMqQk_72hfU">First
 FDA-Approved Diagnostic Agent to Detect Tau Tangles in Alzheimer’s
 Patients</a></li>
+</ul>
+<p><strong>Research projects:</strong></p>
+<ul>
+<li><a href="https://ay2543.github.io/walkability.io/">Analysis of
+neighborhood walkability and health outcomes in the US</a></li>
 </ul>
 
 
