--- a/resume.html
+++ b/resume.html
@@ -345,7 +345,7 @@ div.tocify {
   <a href="publication.html">
     <span class="fa fa-light fa-pen"></span>
      
-    Publications
+    Projects
   </a>
 </li>
 <li>
